# zkUnderwrite

./: .gitignore  DEPLOYMENTS.md  DESIGN.md  Dockerfile.risc0  LICENSE  README.md  vercel.json
app/: index.html
contracts/zkunderwrite/: Cargo.toml
contracts/zkunderwrite/src/: lib.rs  test.rs
contracts/zkunderwrite/test_snapshots/test/: double_init_panics.1.json  init_and_getters.1.json  register_issuer_marks_trusted.1.json  request_credit_full_flow_and_replay_guard.1.json  request_credit_rejects_unregistered_issuer_and_below_threshold.1.json
issuer/: Cargo.toml
issuer/src/: main.rs
reference-verifier/: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  _typos.toml  deny.toml  deployment.toml
reference-verifier/.githooks/: pre-push
reference-verifier/.github/workflows/: build-and-test.yml  coverage-pr.yml  coverage.yml  docs.yml  gas-benchmark.yml  linter.yml  semver-checks.yml  ub-detection.yml
reference-verifier/contracts/emergency-stop/: Cargo.toml
reference-verifier/contracts/emergency-stop/src/: lib.rs  test.rs
reference-verifier/contracts/groth16-verifier/: Cargo.toml  build.rs  parameters.json
reference-verifier/contracts/groth16-verifier/src/: lib.rs  test.rs  types.rs
reference-verifier/contracts/interface/: Cargo.toml
reference-verifier/contracts/interface/src/: lib.rs  types.rs
reference-verifier/contracts/mock-verifier/: Cargo.toml
reference-verifier/contracts/mock-verifier/src/: lib.rs  test.rs
reference-verifier/contracts/risc0-router/: Cargo.toml
reference-verifier/contracts/risc0-router/src/: lib.rs  test.rs
reference-verifier/contracts/timelock/: Cargo.toml
reference-verifier/contracts/timelock/src/: lib.rs  test.rs
reference-verifier/docs/: README.md  architecture.md  upgrading-groth16-verifier.md  verifying-risc0-proofs.md
reference-verifier/scripts/: README.md  lib.sh  manage.sh  toml_helper.py
reference-verifier/scripts/commands/: deploy.sh  self_admin.sh  utility.sh  verifier_management.sh
reference-verifier/tools/build-utils/: Cargo.toml
reference-verifier/tools/build-utils/src/: lib.rs
scripts/: e2e.sh  prove-and-claim.sh
src-staging/: guest_main.rs  host_main.rs
zkvm/: Cargo.toml
zkvm/host/: Cargo.toml
zkvm/host/src/: main.rs
zkvm/methods/: Cargo.toml
zkvm/methods/guest/: Cargo.toml
zkvm/methods/guest/src/: main.rs
zkvm/methods/src/: lib.rs
