[package]
name = "zku-issuer"
version = "0.1.0"
edition = "2021"
description = "zkUnderwrite issuer service: signs canonical income statements with Ed25519"

[[bin]]
name = "zku-issuer"
path = "src/main.rs"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
