[package]
name = "groth16-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
risc0-interface = { workspace = true }

[build-dependencies]
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-ec = { workspace = true }
build-utils = { workspace = true }
hex = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
hex = { workspace = true }
